add related work

--- a/main.tex
+++ b/main.tex
@@ -19,7 +19,7 @@
 \usepackage{wrapfig}
 
 \title{\vspace{-3.0cm}CS563: Advanced Computer Security \\ Research Proposal}
-\author{Wing Lam, Davis Li \\
+\author{Wing Lam, Dengfeng Li \\
 \{\href{mailto:winglam2@illinois.edu}{winglam2},
 \href{mailto:dli46@illinois.edu}{dli46}\}@illinois.edu}
 \date{\today}
