--- a/phone.bib
+++ b/phone.bib
@@ -1,3 +1,69 @@
+@inproceedings{Azim2013,
+  author = {Azim, Tanzirul and Neamtiu, Iulian},
+  title = {Targeted and Depth-first Exploration for Systematic Testing of Android Apps},
+  booktitle = {Proceedings of the 2013 ACM SIGPLAN International Conference on Object 
+  Oriented Programming Systems Languages \&\#38; Applications},
+  series = {OOPSLA '13},
+  year = {2013},
+  publisher = {ACM},
+}
+
+@inproceedings{yang-ase15,
+  title = "Static Window Transition Graphs for {A}ndroid", 
+  author = "Shengqian Yang and Hailong Zhang and Haowei Wu and Yan Wang and Dacong Yan 
+  and Atanas Rountev",
+  booktitle = "IEEE/ACM International Conference on Automated Software Engineering",
+  year = 2015,
+  pages = "658-668",
+}
+
+@incollection{yang2013grey,
+  title="A grey-box approach for automated GUI-model generation of mobile applications",
+  author="Yang, Wei and Prasad, Mukul R and Xie, Tao",
+  booktitle="Fundamental Approaches to Software Engineering",
+  pages="250--265",
+  year="2013",
+  publisher="Springer"
+}
+
+@INPROCEEDINGS{gtgz:14,
+  author = {Alessandra Gorla and Ilaria Tavecchia and Florian Gross and Andreas Zeller},
+  title = {{Checking App Behavior Against App Descriptions}},
+  booktitle = {Proceedings of the International Conference on Software Engineering (ICSE)},
+  year = 2014,
+}
+
+@INPROCEEDINGS{hlxw:15,
+  author = {Jianjun Huang and Zhichun Li and Xusheng Xiao and Zhenyu Wu and Kangjie Lu and Xiangyu Zhang and Guofei Jiang},
+  title = {{SUPOR: Precise and Scalable Sensitive User Input Detection for Android Apps}},
+  booktitle = {Proceedings of the USENIX Security Symposium},
+  year = 2015,
+}
+
+@inproceedings{Huang:2014,
+  author = {Huang, Jianjun and Zhang, Xiangyu and Tan, Lin and Wang, Peng and Liang, 
+  Bin},
+  title = {AsDroid: Detecting Stealthy Behaviors in Android Applications by User Interface 
+  and Program Behavior Contradiction},
+  booktitle = {Proceedings of the 36th International Conference on Software Engineering},
+  year = {2014},
+  pages = {1036--1046},
+}
+
+@INPROCEEDINGS{nmyz:15,
+  author = {Yuhong Nan and Min Yang and Zhemin Yang and Shunfan Zhou and Guofei Gu and and XiaoFeng Wang},
+  title = {{UIPicker: User-Input Privacy Identification in Mobile Applications}},
+  booktitle = {Proceedings of the USENIX Security Symposium},
+  year = 2015,
+}
+
+@INPROCEEDINGS{pxy:13,
+  author = {Rahul Pandita and Xusheng Xiao and Wei Yang and William Enck and Tao Xie},
+  title = {{WHYPER: Towards Automating Risk Assessment of Mobile Applications}},
+  booktitle = {Proceedings of the USENIX Security Symposium},
+  year = 2013,
+}
+
 
 %%-- Telco ----------------------------------------------------------
 
@@ -7,7 +73,6 @@
   JOURNAL = {Journal of Computer Security},
   VOLUME = {16},
   NUMBER = {6},
-  MONTH = dec,
   YEAR = 2008,
 }
 
@@ -15,7 +80,6 @@
   AUTHOR = {Patrick Traynor and Patrick McDaniel and Thomas {La Porta}},
   TITLE = {{On Attack Causality in Internet-Connected Cellular Networks}},
   BOOKTITLE = {Proceedings of the USENIX Security Symposium},
-  MONTH = august,
   YEAR = 2007,
 }
 
