--- a/background.tex
+++ b/background.tex
@@ -1,5 +1,13 @@
 WeChat Android is compiled and run on Android platform. This section presents the overview 
 of Android OS architecture and Android application. 
+
+\begin{figure}
+	\centering
+	\includegraphics[width=0.38\textwidth]{android_framework.png}%
+	\caption{Android OS Architecture}
+	\label{fig:androw_framework}
+\end{figure}
+
 \subsection{Android OS}
 Android Operation System (OS) is a open-sourced Linux based software stack as represented in 
 Figure~\ref{fig:androw_framework}. Majority Android phone manufacture customized their own 
@@ -19,12 +27,7 @@ in C/C++ as Native libraries and call them through Java Native Interface (JNI). 
 to have low-level access to the system resources (e.g., memory, I/O, and etc) and reuse 
 codebase that is implemented in C/C++.  
 
-\begin{figure}
-	\centering
-	\includegraphics[height=2in, width=3.2in]{android_framework.pdf}
-	\caption{Android OS Architecture}
-	\label{fig:androw_framework}
-\end{figure}
+
 
 \subsection{Android Application}
 Android app consists of four types of components:
